--- a/client/src/routes/listPage/listPage.scss
+++ b/client/src/routes/listPage/listPage.scss
@@ -15,6 +15,7 @@
       flex-direction: column;
       gap: 50px;
       overflow-y: scroll;
+      scrollbar-width: none;
       padding-bottom: 50px;
     }
   }
